--- a/lab3f/src/styles.scss
+++ b/lab3f/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+$main-color: #44318D;
+$main-color-2: #7887c5;
+$text-color: white;
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+}
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    height: 100vh;
+}
+
+a {
+    text-decoration: none;
+}
